# hyper-mcp

./: .gitignore  .gitmodules  AGENTS.md  BUILT_IN_TOOLS.md  CONFIG.md  CREATING_PLUGINS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  OAUTH_SCOPES.md  README.md  RUNTIME_CONFIG.md  TEMPLATES.md  build.rs  config.example.json  config.example.yaml  deny.toml  justfile  lefthook.yml  rust-toolchain.toml  server.json  xtp-plugin-schema.json
.cargo/: audit.toml
.claude-plugin/: marketplace.json
.github/: renovate.json5
.github/workflows/: ci.yml  nightly.yml  release.yml
.sentrux/: rules.toml
iac/: main.tf
mcpb/: manifest.json
plugins/hyper-mcp/: .mcp.json  README.md  config.json
plugins/hyper-mcp/.claude-plugin/: plugin.json
src/: cli.rs  config.rs  expand_env.rs  https_auth.rs  logging.rs  main.rs  models.rs  naming.rs  oauth2.rs  plugin.rs  plugins.rs  service.rs  state.rs  update.rs
src/streamable_http/: auth.rs  mod.rs  routes.rs  scopes.rs  state.rs
src/wasm/: cache.rs  http.rs  locks.rs  mod.rs  oci.rs  retry.rs  s3.rs
tests/fixtures/: allowed_paths_examples.yaml  documentation_example.json  documentation_example.yaml  skip_tools_examples.yaml  valid_config.yaml
