[package]
name = "hyper-mcp"
version = "0.7.4"
edition = "2024"
authors = ["Tuan Anh Tran <me@tuananh.org>", "Joseph Wortmann <joseph.wortmann@gmail.com>"]
description = " A fast, secure MCP server that extends its capabilities through WebAssembly plugins"
keywords = ["rust", "ai", "mcp", "cli", "stdio"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/hyper-mcp-rs/hyper-mcp"
homepage = "https://github.com/hyper-mcp-rs/hyper-mcp"
documentation = "https://github.com/hyper-mcp-rs/hyper-mcp"

[dependencies]
git-version = "0.3"
anyhow = "1.0"
async-trait = "0.1"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-smithy-types = "1.4"
backon = "1.6"
aws-sdk-s3 = "1.135"
axum = "0.8"
bytesize = "2.3"
camino = "1.2"
clap = { version = "4.6", features = ["derive", "env"] }
ctor = "1.0"
dashmap = { version = "6.2", features = ["serde"] }
directories = "6.0"
dirs = "6.0"
docker_credential = "1.4"
extism = "1.30"
extism-convert = "1.30"
flate2 = "1.1"
futures = "0.3"
hex = "0.4"
keyring = "4.0"
keyring-core = "1.0"
oauth2 = { version = "5.0", features = ["reqwest-blocking"] }
oci-client = "0.17"
percent-encoding = "2.3"
rmcp = { version = "1.7", features = [
    "elicitation",
    "macros",
    "schemars",
    "server",
    "transport-io",
] }
regex = { version = "1.12", features = ["unicode", "perf"] }
reqwest = { version = "0.13", features = ["json"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.21"
sha2 = "0.11"
sigstore = { version = "0.14", features = ["cosign", "verify", "bundle"] }
strum = "0.28"
strum_macros = "0.28"
tar = "0.4"
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7"
toml = "1.1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.23", features = ["serde"] }

[dev-dependencies]
aws-sdk-s3 = { version = "1.135", features = ["test-util"] }
aws-smithy-mocks = "0.2"
aws-smithy-runtime-api = "1.12"
rmcp = { version = "1.7", features = [
    "client",
    "transport-async-rw",
] }
tempfile = "3.27"
tokio-test = "0.4"

[[bin]]
name = "hyper-mcp"
path = "src/main.rs"

[package.metadata.release]
publish = true
push = true
tag = true
tag-name = "v{{version}}"
