[workspace]
members = [".", "external/auto-update"]

[package]
name = "hyper-mcp"
version = "0.8.3"
edition = "2024"
authors = ["Tuan Anh Tran <me@tuananh.org>", "Joseph Wortmann <joseph.wortmann@gmail.com>"]
description = " A fast, secure MCP server that extends its capabilities through WebAssembly plugins"
keywords = ["rust", "ai", "mcp", "cli", "stdio"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/hyper-mcp-rs/hyper-mcp"
homepage = "https://github.com/hyper-mcp-rs/hyper-mcp"
documentation = "https://github.com/hyper-mcp-rs/hyper-mcp"

[dependencies]
auto-update = { path = "external/auto-update", version = "0.1.0" }
git-version = "0.3"
anyhow = "1.0"
async-trait = "0.1"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-smithy-types = "1.5"
backon = "1.6"
aws-sdk-s3 = "1.137"
axum = "0.8"
bytesize = "2.4"
camino = "1.2"
clap = { version = "4.6", features = ["derive", "env"] }
ctor = "1.0"
dashmap = { version = "6.2", features = ["serde"] }
directories = "6.0"
dirs = "6.0"
docker_credential = "1.4"
extism = "1.30"
extism-convert = "1.30"
flate2 = "1.1"
futures = "0.3"
hex = "0.4"
keyring = "4.1"
oauth2 = { version = "5.0", features = ["reqwest-blocking"] }
oci-client = "0.17"
percent-encoding = "2.3"
rmcp = { version = "2.1", features = [
    "elicitation",
    "macros",
    "schemars",
    "server",
    "transport-io",
] }
regex = { version = "1.12", features = ["unicode", "perf"] }
reqwest = { version = "0.13", features = ["json"] }
schemars = "1.2"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.21"
sha2 = "0.11"
sigstore = { version = "0.14", features = ["cosign", "verify", "bundle"] }
strum = "0.28"
strum_macros = "0.28"
tar = "0.4"
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7"
toml = "1.1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.23", features = ["serde"] }

# Release archives are `.tar.gz` on Unix and `.zip` on Windows, so the zip
# extractor is only needed when building the Windows target.
# Only Deflate extraction is needed (release `.zip`s are Deflate-compressed);
# dropping the default features avoids pulling in bzip2/zstd/AES and their
# heavier, differently-licensed transitive dependencies.
[target.'cfg(windows)'.dependencies]
zip = { version = "8.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
aws-sdk-s3 = { version = "1.137", features = ["test-util"] }
aws-smithy-mocks = "0.2"
aws-smithy-runtime-api = "1.12"
filetime = "0.2"
serial_test = "2.0"
rmcp = { version = "2.1", features = [
    "client",
    "transport-async-rw",
] }
tempfile = "3.27"
tokio-test = "0.4"

[[bin]]
name = "hyper-mcp"
path = "src/main.rs"

[package.metadata.release]
publish = true
push = true
tag = true
tag-name = "v{{version}}"

# Keep the Claude Code plugin manifest version in sync with the crate version.
# `exactly = 1` makes the release fail loudly if the field can't be found or
# matches more than once (e.g. after a manifest refactor).
[[package.metadata.release.pre-release-replacements]]
file = "plugins/hyper-mcp/.claude-plugin/plugin.json"
search = '"version": "[^"]+"'
replace = '"version": "{{version}}"'
exactly = 1
